@@ -173,8 +173,9 @@ CVS code -
 	  color_to_int(), and add a few miscellaneous tweaks.
 	- Still more steps toward full wide/multibyte character support.
 	  Make whitespace display mode work with multibyte characters,
-	  and add a few related documentation updates.  Changes to
-	  do_help(), main(), parse_rcfile(), and display_string(). (DLR)
+	  and add a few related documentation updates.  New function
+	  make_mbstring(); changes to do_help(), main(), parse_rcfile(),
+	  and display_string(). (DLR)
 - cut.c:
   do_cut_text()
 	- If keep_cutbuffer is FALSE, only blow away the text in the
